--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,13 +2,38 @@
   text-align: center;
 }
 
+ul {
+  list-style-type: none;
+}
+
+button{
+  background-color: #3d6fa8;
+  border: none;
+  color: white;
+  padding: 12px 32px;
+  margin: 4px 2px;
+  cursor: pointer;
+  text-transform: uppercase;
+  border-radius: 2px;
+}
+
+input {
+  margin: 10px;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+
+}
+
 nav {
   display: flex;
   justify-content: center;
   background-color: #f2f2f2;
-  padding: 1em;  
+  padding: 2em;  
   gap: 20px;
   list-style: none;
+  font-size: 24px;
 }
 
 @media (prefers-reduced-motion: no-preference) {
